# rssskull

./: .dockerignore  .env.example  .env.production  .gitattributes  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  Jenkinsfile  LICENSE  MIGRATION_STATUS.md  README.md  README_DOCKER.md  README_PYTHON.md  RELEASE_NOTES_v0.02.5.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SYSTEM_FIX.md  biome.json  build-local.ps1  build-local.sh  check_feeds.js  check_feeds.sql  debug-bot-step-by-step.js  debug-bot.js  deploy.ps1  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  how.md  jest.config.js  loglog.md  monitor.sh  nginx-rss-skull.conf  package-lock.json  package.json  (+12 more)
.github/: dependabot.yml  pull_request_template.md
.jenkins/: pipeline-config.yml
app/: __init__.py  bot.py  config.py  database.py  main.py  scheduler.py
backups/: backup-2025-10-25T05-46-23-672Z.json  backup-2025-10-25T05-47-45-112Z.json  backup-2025-10-25T05-51-26-613Z.json
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPRECATED.md  DEVELOPMENT.md  INSTALLATION.md  OPERATIONS.md  RSS_BRIDGE_SETUP.md  SECURITY.md  USAGE.md  ideas.md
leia/: DOC.md  docs_manifest_20251024_223910.json  system.md
nginx/: nginx.conf
prisma/: schema.prisma
scripts/: MIGRATION.md  add-sample-feeds.js  auto-backup.js  backup-database.js  backup.sh  check-bot-database.js  check-database.js  comandos-deploy-vm.txt  deploy-production.sh  deploy-to-github.sh  deploy-vm.sh  depoy-vm.md  (+13 more)
(+167 files in other folders)
