[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-skull-bot"
version = "0.5.0"
description = "Modern RSS to Telegram Bot with Reddit support and bilingual commands"
authors = [
    {name = "Pablo Murad", email = "runawaydevil@pm.me"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.4.1,<2.10",
    "pydantic-settings>=2.6.1",
    "sqlmodel>=0.0.23",
    "alembic>=1.14.0",
    "aiohttp>=3.9.0,<3.11",
    "feedparser>=6.0.11",
    "redis>=5.0.0",
    "apscheduler>=3.10.4",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

